build_fsk_txrx.log
arm-none-eabi-gcc -c -mcpu=cortex-m0 start.S -o start.o
arm-none-eabi-gcc  -Os -Wall -Werror -mcpu=cortex-m0 -fno-builtin -fshort-enums -fno-delete-null-pointer-checks -std=c2x -MMD -flto=auto -Wextra -DPRINTF_INCLUDE_CONFIG_H -DAUTHOR_STRING=\"EGZUMER\" -DVERSION_STRING=\"fsk-working\" -DENABLE_SPECTRUM -DENABLE_FMRADIO -DENABLE_UART -DENABLE_BIG_FREQ -DENABLE_SMALL_BOLD -DENABLE_WIDE_RX -DENABLE_TX_WHEN_AM -DENABLE_SHOW_CHARGE_LEVEL -DENABLE_NO_CODE_SCAN_TIMEOUT -DENABLE_AM_FIX -DENABLE_SQUELCH_MORE_SENSITIVE -DENABLE_FASTER_CHANNEL_SCAN -DENABLE_RSSI_BAR -DENABLE_AUDIO_BAR -DENABLE_COPY_CHAN_TO_VFO -DENABLE_BYP_RAW_DEMODULATORS -DENABLE_SCAN_RANGES -DENABLE_DTMF_CALLING -DENABLE_FLASHLIGHT -DENABLE_CUSTOM_MENU_LAYOUT  -I C:/ag/bkv1/ -I C:/ag/bkv1//external/CMSIS_5/CMSIS/Core/Include/ -I C:/ag/bkv1//external/CMSIS_5/Device/ARM/ARMCM0/Include -c init.c -o init.o
arm-none-eabi-gcc  -Os -Wall -Werror -mcpu=cortex-m0 -fno-builtin -fshort-enums -fno-delete-null-pointer-checks -std=c2x -MMD -flto=auto -Wextra -DPRINTF_INCLUDE_CONFIG_H -DAUTHOR_STRING=\"EGZUMER\" -DVERSION_STRING=\"fsk-working\" -DENABLE_SPECTRUM -DENABLE_FMRADIO -DENABLE_UART -DENABLE_BIG_FREQ -DENABLE_SMALL_BOLD -DENABLE_WIDE_RX -DENABLE_TX_WHEN_AM -DENABLE_SHOW_CHARGE_LEVEL -DENABLE_NO_CODE_SCAN_TIMEOUT -DENABLE_AM_FIX -DENABLE_SQUELCH_MORE_SENSITIVE -DENABLE_FASTER_CHANNEL_SCAN -DENABLE_RSSI_BAR -DENABLE_AUDIO_BAR -DENABLE_COPY_CHAN_TO_VFO -DENABLE_BYP_RAW_DEMODULATORS -DENABLE_SCAN_RANGES -DENABLE_DTMF_CALLING -DENABLE_FLASHLIGHT -DENABLE_CUSTOM_MENU_LAYOUT  -I C:/ag/bkv1/ -I C:/ag/bkv1//external/CMSIS_5/CMSIS/Core/Include/ -I C:/ag/bkv1//external/CMSIS_5/Device/ARM/ARMCM0/Include -c external/printf/printf.c -o external/printf/printf.o
arm-none-eabi-gcc  -Os -Wall -Werror -mcpu=cortex-m0 -fno-builtin -fshort-enums -fno-delete-null-pointer-checks -std=c2x -MMD -flto=auto -Wextra -DPRINTF_INCLUDE_CONFIG_H -DAUTHOR_STRING=\"EGZUMER\" -DVERSION_STRING=\"fsk-working\" -DENABLE_SPECTRUM -DENABLE_FMRADIO -DENABLE_UART -DENABLE_BIG_FREQ -DENABLE_SMALL_BOLD -DENABLE_WIDE_RX -DENABLE_TX_WHEN_AM -DENABLE_SHOW_CHARGE_LEVEL -DENABLE_NO_CODE_SCAN_TIMEOUT -DENABLE_AM_FIX -DENABLE_SQUELCH_MORE_SENSITIVE -DENABLE_FASTER_CHANNEL_SCAN -DENABLE_RSSI_BAR -DENABLE_AUDIO_BAR -DENABLE_COPY_CHAN_TO_VFO -DENABLE_BYP_RAW_DEMODULATORS -DENABLE_SCAN_RANGES -DENABLE_DTMF_CALLING -DENABLE_FLASHLIGHT -DENABLE_CUSTOM_MENU_LAYOUT  -I C:/ag/bkv1/ -I C:/ag/bkv1//external/CMSIS_5/CMSIS/Core/Include/ -I C:/ag/bkv1//external/CMSIS_5/Device/ARM/ARMCM0/Include -c driver/adc.c -o driver/adc.o
arm-none-eabi-gcc  -Os -Wall -Werror -mcpu=cortex-m0 -fno-builtin -fshort-enums -fno-delete-null-pointer-checks -std=c2x -MMD -flto=auto -Wextra -DPRINTF_INCLUDE_CONFIG_H -DAUTHOR_STRING=\"EGZUMER\" -DVERSION_STRING=\"fsk-working\" -DENABLE_SPECTRUM -DENABLE_FMRADIO -DENABLE_UART -DENABLE_BIG_FREQ -DENABLE_SMALL_BOLD -DENABLE_WIDE_RX -DENABLE_TX_WHEN_AM -DENABLE_SHOW_CHARGE_LEVEL -DENABLE_NO_CODE_SCAN_TIMEOUT -DENABLE_AM_FIX -DENABLE_SQUELCH_MORE_SENSITIVE -DENABLE_FASTER_CHANNEL_SCAN -DENABLE_RSSI_BAR -DENABLE_AUDIO_BAR -DENABLE_COPY_CHAN_TO_VFO -DENABLE_BYP_RAW_DEMODULATORS -DENABLE_SCAN_RANGES -DENABLE_DTMF_CALLING -DENABLE_FLASHLIGHT -DENABLE_CUSTOM_MENU_LAYOUT  -I C:/ag/bkv1/ -I C:/ag/bkv1//external/CMSIS_5/CMSIS/Core/Include/ -I C:/ag/bkv1//external/CMSIS_5/Device/ARM/ARMCM0/Include -c driver/aes.c -o driver/aes.o
arm-none-eabi-gcc  -Os -Wall -Werror -mcpu=cortex-m0 -fno-builtin -fshort-enums -fno-delete-null-pointer-checks -std=c2x -MMD -flto=auto -Wextra -DPRINTF_INCLUDE_CONFIG_H -DAUTHOR_STRING=\"EGZUMER\" -DVERSION_STRING=\"fsk-working\" -DENABLE_SPECTRUM -DENABLE_FMRADIO -DENABLE_UART -DENABLE_BIG_FREQ -DENABLE_SMALL_BOLD -DENABLE_WIDE_RX -DENABLE_TX_WHEN_AM -DENABLE_SHOW_CHARGE_LEVEL -DENABLE_NO_CODE_SCAN_TIMEOUT -DENABLE_AM_FIX -DENABLE_SQUELCH_MORE_SENSITIVE -DENABLE_FASTER_CHANNEL_SCAN -DENABLE_RSSI_BAR -DENABLE_AUDIO_BAR -DENABLE_COPY_CHAN_TO_VFO -DENABLE_BYP_RAW_DEMODULATORS -DENABLE_SCAN_RANGES -DENABLE_DTMF_CALLING -DENABLE_FLASHLIGHT -DENABLE_CUSTOM_MENU_LAYOUT  -I C:/ag/bkv1/ -I C:/ag/bkv1//external/CMSIS_5/CMSIS/Core/Include/ -I C:/ag/bkv1//external/CMSIS_5/Device/ARM/ARMCM0/Include -c driver/backlight.c -o driver/backlight.o
arm-none-eabi-gcc  -Os -Wall -Werror -mcpu=cortex-m0 -fno-builtin -fshort-enums -fno-delete-null-pointer-checks -std=c2x -MMD -flto=auto -Wextra -DPRINTF_INCLUDE_CONFIG_H -DAUTHOR_STRING=\"EGZUMER\" -DVERSION_STRING=\"fsk-working\" -DENABLE_SPECTRUM -DENABLE_FMRADIO -DENABLE_UART -DENABLE_BIG_FREQ -DENABLE_SMALL_BOLD -DENABLE_WIDE_RX -DENABLE_TX_WHEN_AM -DENABLE_SHOW_CHARGE_LEVEL -DENABLE_NO_CODE_SCAN_TIMEOUT -DENABLE_AM_FIX -DENABLE_SQUELCH_MORE_SENSITIVE -DENABLE_FASTER_CHANNEL_SCAN -DENABLE_RSSI_BAR -DENABLE_AUDIO_BAR -DENABLE_COPY_CHAN_TO_VFO -DENABLE_BYP_RAW_DEMODULATORS -DENABLE_SCAN_RANGES -DENABLE_DTMF_CALLING -DENABLE_FLASHLIGHT -DENABLE_CUSTOM_MENU_LAYOUT  -I C:/ag/bkv1/ -I C:/ag/bkv1//external/CMSIS_5/CMSIS/Core/Include/ -I C:/ag/bkv1//external/CMSIS_5/Device/ARM/ARMCM0/Include -c driver/bk1080.c -o driver/bk1080.o
arm-none-eabi-gcc  -Os -Wall -Werror -mcpu=cortex-m0 -fno-builtin -fshort-enums -fno-delete-null-pointer-checks -std=c2x -MMD -flto=auto -Wextra -DPRINTF_INCLUDE_CONFIG_H -DAUTHOR_STRING=\"EGZUMER\" -DVERSION_STRING=\"fsk-working\" -DENABLE_SPECTRUM -DENABLE_FMRADIO -DENABLE_UART -DENABLE_BIG_FREQ -DENABLE_SMALL_BOLD -DENABLE_WIDE_RX -DENABLE_TX_WHEN_AM -DENABLE_SHOW_CHARGE_LEVEL -DENABLE_NO_CODE_SCAN_TIMEOUT -DENABLE_AM_FIX -DENABLE_SQUELCH_MORE_SENSITIVE -DENABLE_FASTER_CHANNEL_SCAN -DENABLE_RSSI_BAR -DENABLE_AUDIO_BAR -DENABLE_COPY_CHAN_TO_VFO -DENABLE_BYP_RAW_DEMODULATORS -DENABLE_SCAN_RANGES -DENABLE_DTMF_CALLING -DENABLE_FLASHLIGHT -DENABLE_CUSTOM_MENU_LAYOUT  -I C:/ag/bkv1/ -I C:/ag/bkv1//external/CMSIS_5/CMSIS/Core/Include/ -I C:/ag/bkv1//external/CMSIS_5/Device/ARM/ARMCM0/Include -c driver/bk4819.c -o driver/bk4819.o
driver/bk4819.c: In function 'BK4819_FskEnableRx':
driver/bk4819.c:1876:30: error: 'BK4819_REG_5E' undeclared (first use in this function); did you mean 'BK4819_REG_7E'?
 1876 |         BK4819_WriteRegister(BK4819_REG_5E, 0x0004);
      |                              ^~~~~~~~~~~~~
      |                              BK4819_REG_7E
driver/bk4819.c:1876:30: note: each undeclared identifier is reported only once for each function it appears in
make: *** [driver/bk4819.o] Hata 1
